# Insight-Report

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  routes.py
app/auth/: __init__.py  decorators.py  models.py  routes.py  utils.py
app/data/: __init__.py  detector.py  loader.py  validator.py
app/eda/: __init__.py  correlation.py  distribution.py  insights.py  missing.py  statistics.py
app/evaluation/: __init__.py  classification.py  improvements.py  regression.py  summary.py
app/models/: __init__.py  classifiers.py  regressors.py  selector.py  trainer.py
app/preprocessing/: __init__.py  categorical.py  logger.py  numerical.py  pipeline.py
app/report/: __init__.py  generator.py
app/utils/: cleanup.py  progress.py  rate_limit.py
app/xai/: __init__.py  pdp.py  permutation.py  summary.py
static/css/: components.css  main.css  report.css
static/js/: progress.js
templates/: eda_results.html  evaluation_results.html  glossary.html  index.html  layout.html  login.html  model_comparison.html  preprocessing_settings.html  register.html  run_analysis.html  select_target.html  train_models.html  upload.html  xai_results.html
